fix(neon_framework): Migrate to notifications_push_repository
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/lib/l10n/en.arb
+++ b/packages/neon_framework/lib/l10n/en.arb
@@ -104,6 +104,7 @@
   "actionContinue": "Continue",
   "actionCancel": "Cancel",
   "actionDone": "Done",
+  "actionOpen": "Open",
   "firstLaunchGoToSettingsToEnablePushNotifications": "Go to the settings to enable push notifications",
   "nextPushSupported": "NextPush is supported!",
   "nextPushSupportedText": "NextPush is a FOSS way of receiving push notifications using the UnifiedPush protocol via a Nextcloud instance.\nYou can install NextPush from the F-Droid app store.",
@@ -162,9 +163,8 @@
   "globalOptionsThemeOLEDAsDark": "OLED theme as dark theme",
   "globalOptionsThemeUseNextcloudTheme": "Use Nextcloud theme",
   "globalOptionsThemeCustomBackground": "Custom background",
-  "globalOptionsPushNotificationsEnabled": "Enabled",
-  "globalOptionsPushNotificationsEnabledDisabledNotice": "No UnifiedPush distributor could be found or you denied the permission for showing notifications. Please go to the app settings and allow notifications and go to https://unifiedpush.org/users/distributors and setup any of the listed distributors. Then re-open this app and you should be able to enable notifications",
-  "globalOptionsPushNotificationsDistributor": "UnifiedPush Distributor",
+  "globalOptionsPushNotifications": "UnifiedPush",
+  "globalOptionsPushNotificationsDisabled": "Disabled",
   "globalOptionsPushNotificationsDistributorGotifyUP": "Gotify-UP (FOSS)",
   "globalOptionsPushNotificationsDistributorFirebaseEmbedded": "Firebase (proprietary)",
   "globalOptionsPushNotificationsDistributorNtfy": "ntfy (FOSS)",
