--- a/packages/neon_framework/lib/l10n/en.arb
+++ b/packages/neon_framework/lib/l10n/en.arb
@@ -2,7 +2,7 @@
   "@@locale": "en",
   "nextcloud": "Nextcloud",
   "nextcloudLogo": "Nextcloud logo",
-  "appImplementationName": "{app, select, nextcloud{Nextcloud} core{Server} dashboard{Dashboard} files{Files} news{News} notes{Notes} notifications{Notifications} talk{Talk} other{}}",
+  "appImplementationName": "{app, select, nextcloud{Nextcloud} core{Server} dashboard{Dashboard} files{Files} news{News} notes{Notes} notifications{Notifications} spreed{Talk} talk{Talk} other{}}",
   "@appImplementationName": {
     "placeholders": {
       "app": {}
