feat(talk_app): Add reactions overview dialog
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/packages/talk_app/lib/l10n/en.arb
+++ b/packages/neon_framework/packages/talk_app/lib/l10n/en.arb
@@ -31,6 +31,9 @@
       }
     }
   },
+  "reactions": "Reactions",
+  "reactionsAll": "All",
+  "reactionsSeeAll": "See all reactions",
   "reactionsAddNew": "Add a new reaction",
   "reactionsLoading": "Loading reactions",
   "roomsCreateNew": "Create new room"
