chore(nextcloud_test): Update presets
Signed-off-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/notes/4.9
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/notes/4.9
@@ -3,8 +3,8 @@ COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/relea
 COOKBOOK_CHECKSUM=sha256:ba96d3773bb5ec11fab5e860094713c41bd354e3b7d4aae2ff7def19de149f2c
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.6.1.tar.gz
 DROP_ACCOUNT_CHECKSUM=sha256:226e84712aa61d62e99eaa834abc7cd4496ed07289830af06cefeb58c4135123
-NEWS_URL=https://github.com/nextcloud/news/releases/download/25.0.0-alpha14/news.tar.gz
-NEWS_CHECKSUM=sha256:e80ead503d78844a39d5eb341209f4064d516635e35b5292abf324dcfd02fd7c
+NEWS_URL=https://github.com/nextcloud/news/releases/download/25.0.0/news.tar.gz
+NEWS_CHECKSUM=sha256:9b643ebeaec6e683ebf5fc085feeb935179ac737315de850050e764f856b61fc
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.9.4/notes-v4.9.4.tar.gz
 NOTES_CHECKSUM=sha256:bc987c9f905908916df495dee7c37efec438264cf264a0c5c18521264b26a083
 SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v19.0.11/spreed-v19.0.11.tar.gz
