--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/spreed/20.1
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/spreed/20.1
@@ -7,8 +7,8 @@ NEWS_URL=https://github.com/nextcloud/news/releases/download/25.1.0/news.tar.gz
 NEWS_CHECKSUM=sha256:27877df2c93c62a53f9a032354c537159eabab6bb3a29963a07150b2e679ced0
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.11.0/notes-v4.11.0.tar.gz
 NOTES_CHECKSUM=sha256:7693027a18e13d0a0e03e31574b786737ef4866a96ce6b0c733815d3c9bf70ee
-SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.0-rc.3/spreed-v20.1.0-rc.3.tar.gz
-SPREED_CHECKSUM=sha256:07b4b24cfe12701b8fa674667030c08366571d219313e433baeb3e5bf18f55e3
+SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.0/spreed-v20.1.0.tar.gz
+SPREED_CHECKSUM=sha256:548a96fc5fb05381e62d505c1692021146ae814f0190398e023a256c7749e956
 TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.8.1/tables-v0.8.1.tar.gz
 TABLES_CHECKSUM=sha256:d39dd61f4408fef8618fb2015923b478e33b372467812b1b515722ca466bf05a
 UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/1.5.1.tar.gz
