--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.7
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.7
@@ -11,5 +11,7 @@ SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.
 SPREED_CHECKSUM=sha256:2a57490f8f6fc4bd5c471b12f1e3974dcd2e61f8fc72d0a113060c2a271f2606
 TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.7.5/tables-v0.7.5.tar.gz
 TABLES_CHECKSUM=sha256:abab5c97174c9f190e712eafd108fb49068dd8c19ccea4b79a6f839b492eb0c7
+TERMS_OF_SERVICE_URL=https://github.com/nextcloud-releases/terms_of_service/releases/download/v4.4.0/terms_of_service-v4.4.0.tar.gz
+TERMS_OF_SERVICE_CHECKSUM=sha256:93ffce2e94d488b131a6e73cd63636efb8f7af502c7f49678fd53fe6a877bf20
 UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.3.0.tar.gz
 UPPUSH_CHECKSUM=sha256:dd00f782d09f86cf6d5ab6e288f3d5ee5631a7319085cdf5ba7499ba472bbcdd
