--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/news/25.2
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/news/25.2
@@ -1,14 +1,14 @@
-SERVER_VERSION=29.0.10-fpm-alpine@sha256:0f2ed9ab29e34ade2796d0060128ffcd62f675ecec2ae9c9f81b7e7c33f7646f
+SERVER_VERSION=30.0.4-fpm-alpine@sha256:83b566bcdac262db029f220401684c8b301fe662d39c922515f1867d190a6e2a
 COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/releases/download/v0.11.2/cookbook-0.11.2.tar.gz
 COOKBOOK_CHECKSUM=sha256:ba96d3773bb5ec11fab5e860094713c41bd354e3b7d4aae2ff7def19de149f2c
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.6.1.tar.gz
 DROP_ACCOUNT_CHECKSUM=sha256:226e84712aa61d62e99eaa834abc7cd4496ed07289830af06cefeb58c4135123
-NEWS_URL=https://github.com/nextcloud/news/releases/download/25.1.2/news.tar.gz
-NEWS_CHECKSUM=sha256:2e73aed73843f6c5a533cd624127650a52d15726451770cb1facebc75358b2bf
-NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.9.4/notes-v4.9.4.tar.gz
-NOTES_CHECKSUM=sha256:bc987c9f905908916df495dee7c37efec438264cf264a0c5c18521264b26a083
-SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v19.0.11/spreed-v19.0.11.tar.gz
-SPREED_CHECKSUM=sha256:b02b77c158f48db43242d4cae3cdc0ba926d6fb6baf855b39e98cba33f6611a3
+NEWS_URL=https://github.com/nextcloud/news/releases/download/25.2.0-beta.1/news.tar.gz
+NEWS_CHECKSUM=sha256:12926bfdd332102614526c99ffccfb0f24e6bde9f82f34306626ddf535b482d8
+NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.11.0/notes-v4.11.0.tar.gz
+NOTES_CHECKSUM=sha256:7693027a18e13d0a0e03e31574b786737ef4866a96ce6b0c733815d3c9bf70ee
+SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.1/spreed-v20.1.1.tar.gz
+SPREED_CHECKSUM=sha256:4b96e5db08ae1224b87b5727b79fd1eb3805b250c49e811df41925f47f6e7c4e
 TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.8.2/tables-v0.8.2.tar.gz
 TABLES_CHECKSUM=sha256:7565d5274f5d89270a9ad8e7bd1bd9c896a11d613a27b615eb4f316972efb34e
 UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.1.3.tar.gz
