--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.9
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.9
@@ -1,4 +1,4 @@
-SERVER_VERSION=29.0.11-fpm-alpine@sha256:15d044f56a7b97916e6e7da585d77ad79b299fac54330c00c6d2d8843a05f9fc
+SERVER_VERSION=30.0.5-fpm-alpine@sha256:d4ab53cffbf1f6cffb5c2db7ace734be6cb68d12e6622ecb72da1d0cac7bea65
 COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/releases/download/v0.11.2/cookbook-0.11.2.tar.gz
 COOKBOOK_CHECKSUM=sha256:ba96d3773bb5ec11fab5e860094713c41bd354e3b7d4aae2ff7def19de149f2c
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.6.1.tar.gz
@@ -7,9 +7,9 @@ NEWS_URL=https://github.com/nextcloud/news/releases/download/25.2.0/news.tar.gz
 NEWS_CHECKSUM=sha256:8c9985f7c98d01aa593c4012a07e5bfe114b1617315b96bfd6af3a14531ac322
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.11.0/notes-v4.11.0.tar.gz
 NOTES_CHECKSUM=sha256:7693027a18e13d0a0e03e31574b786737ef4866a96ce6b0c733815d3c9bf70ee
-SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v19.0.12/spreed-v19.0.12.tar.gz
-SPREED_CHECKSUM=sha256:f02d93a29c9b785733a5a350177216795877b8f5e636343599d7164f260eb19c
-TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.6.6/tables-v0.6.6.tar.gz
-TABLES_CHECKSUM=sha256:7ce024420ccaa09fcfef4e0d4dc295d3100ce8d20df8de18ab6c8f09e8e4ef5d
+SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.3/spreed-v20.1.3.tar.gz
+SPREED_CHECKSUM=sha256:8f6af4749e5062b18715b09fbaec8e99747ba0437bf0d6a09f941bf24ce69270
+TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.9.0-beta.1/tables-v0.9.0-beta.1.tar.gz
+TABLES_CHECKSUM=sha256:76ef591927fc2606a8353a5ab4c4c3395f8e94f243dde8f5b43a25040ab708f5
 UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.1.3.tar.gz
 UPPUSH_CHECKSUM=sha256:31af7575a7230a209515b27276b7db0f1776d545e10273d63cbe5b177047c562
