chore(nextcloud_test_presets): Update presets
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.9
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/tables/0.9
@@ -1,14 +1,14 @@
-SERVER_VERSION=30.0.6-fpm-alpine@sha256:fd092d936643c2e0c0b80c27d5518c793e5e215d5b5836e5ecdca973395b2c34
+SERVER_VERSION=31.0.0-fpm-alpine@sha256:2e43676aad2ebdcd2a2d430478a8609a441b133e096a21d871139aaeab0eeff1
 COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/releases/download/v0.11.2/cookbook-0.11.2.tar.gz
 COOKBOOK_CHECKSUM=sha256:ba96d3773bb5ec11fab5e860094713c41bd354e3b7d4aae2ff7def19de149f2c
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.7.1.tar.gz
 DROP_ACCOUNT_CHECKSUM=sha256:0005804798bc9a81a5c8631a36a27040fa8f007a96bc87f89af67853475f83f0
-NEWS_URL=https://github.com/nextcloud/news/releases/download/25.2.1/news.tar.gz
-NEWS_CHECKSUM=sha256:3ad5b8d9442d1b77c225dc0f5bab7a6fad18d96b1c670efcff62f6da43221628
+NEWS_URL=https://github.com/nextcloud/news/releases/download/25.3.0-beta.1/news.tar.gz
+NEWS_CHECKSUM=sha256:e14788dc593da870b6199f522d4d837497372da81a18d23130d3882923646502
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.11.0/notes-v4.11.0.tar.gz
 NOTES_CHECKSUM=sha256:7693027a18e13d0a0e03e31574b786737ef4866a96ce6b0c733815d3c9bf70ee
-SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.4/spreed-v20.1.4.tar.gz
-SPREED_CHECKSUM=sha256:f8c629942aba2b1d54884cfe22c6e2b7b9103617b8767732e96fb2ede333ba20
+SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v21.0.0/spreed-v21.0.0.tar.gz
+SPREED_CHECKSUM=sha256:7cc5eb208f4fb83c82b04ecf2625732349d56afc3a7ee10bd71145d280318c01
 TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.9.0/tables-v0.9.0.tar.gz
 TABLES_CHECKSUM=sha256:c20eb0abb98da1c73afbbf0a2a5303f5df2cfffaacc300a487bbd1ea34123e13
 UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.2.5.tar.gz
