--- a/packages/neon_framework/packages/dashboard_app/lib/l10n/en.arb
+++ b/packages/neon_framework/packages/dashboard_app/lib/l10n/en.arb
@@ -2,7 +2,7 @@
   "@@locale": "en",
   "noEntries": "No entries",
   "setUserStatus": "Set status",
-  "weather": "{code, select, clearsky{clear sky} cloudy{cloudy} fair{fair weather} partlycloudy{partly cloudy} fog{foggy} rain{rainfall} lightrain{light rainfall} heavyrain{heavy rainfall} rainshowers{rainfall showers} lightrainshowers{light rainfall showers} heavyrainshowers{heavy rainfall showers} other{}}",
+  "weather": "{code, select, clearsky{clear sky} cloudy{cloudy} snowandthunder{snow and thunder} snowshowersandthunder{snow showers and thunder} snowshowersandthunder_polartwilight{snow showers, thunder and polar twilight} snowshowers{snow showers} snowshowers_polartwilight{snow showers and polar twilight} snow{snow} fair{fair weather} partlycloudy{partly cloudy} fog{foggy} rain{rainfall} lightrain{light rainfall} heavyrain{heavy rainfall} rainshowers{rainfall showers} lightrainshowers{light rainfall showers} heavyrainshowers{heavy rainfall showers} other{}}",
   "@weather": {
     "placeholders": {
       "code": {}
