feat(neon_framework): Add pretty name for KDE UnifiedPush distributor
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/neon_framework/lib/l10n/en.arb
+++ b/packages/neon_framework/lib/l10n/en.arb
@@ -172,6 +172,7 @@
   "globalOptionsPushNotificationsDistributorNextPush": "NextPush (FOSS)",
   "globalOptionsPushNotificationsDistributorNoProvider2Push": "NoProvider2Push (FOSS)",
   "globalOptionsPushNotificationsDistributorConversations": "Conversations",
+  "globalOptionsPushNotificationsDistributorKDE": "KDE",
   "globalOptionsStartupMinimized": "Start minimized",
   "globalOptionsStartupMinimizeInsteadOfExit": "Minimize instead of exit",
   "globalOptionsAccountsRememberLastUsedAccount": "Remember last used account",
