feat(nextcloud_test_presets): Add groupfolders presets
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/drop_account/2.6
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/drop_account/2.6
@@ -3,6 +3,8 @@ COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/relea
 COOKBOOK_CHECKSUM=sha256:1162c1ca9bf9f3c2243b5c31d2f16fdba35293918ac75a6a4964e501c5b69b01
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.6.1.tar.gz
 DROP_ACCOUNT_CHECKSUM=sha256:226e84712aa61d62e99eaa834abc7cd4496ed07289830af06cefeb58c4135123
+GROUPFOLDERS_URL=https://github.com/nextcloud-releases/groupfolders/releases/download/v18.1.2/groupfolders-v18.1.2.tar.gz
+GROUPFOLDERS_CHECKSUM=sha256:c65c5ce26d31c63ac8dcf8bed4beb74a6e304028c97641c3f493e8aecac8e5ed
 NEWS_URL=https://github.com/nextcloud/news/releases/download/25.3.1/news.tar.gz
 NEWS_CHECKSUM=sha256:b6b5e70d2485cabe47297692d52dd7ae5480522893fbc07e90fd2583e7b12dcb
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.12.0/notes-v4.12.0.tar.gz
