--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/news/25.2
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/news/25.2
@@ -3,6 +3,8 @@ COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/relea
 COOKBOOK_CHECKSUM=sha256:1162c1ca9bf9f3c2243b5c31d2f16fdba35293918ac75a6a4964e501c5b69b01
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.7.1.tar.gz
 DROP_ACCOUNT_CHECKSUM=sha256:0005804798bc9a81a5c8631a36a27040fa8f007a96bc87f89af67853475f83f0
+GROUPFOLDERS_URL=https://github.com/nextcloud-releases/groupfolders/releases/download/v18.1.2/groupfolders-v18.1.2.tar.gz
+GROUPFOLDERS_CHECKSUM=sha256:c65c5ce26d31c63ac8dcf8bed4beb74a6e304028c97641c3f493e8aecac8e5ed
 NEWS_URL=https://github.com/nextcloud/news/releases/download/25.2.1/news.tar.gz
 NEWS_CHECKSUM=sha256:3ad5b8d9442d1b77c225dc0f5bab7a6fad18d96b1c670efcff62f6da43221628
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.12.0/notes-v4.12.0.tar.gz
