chore(nextcloud_test_presets): Update presets
Signed-off-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Signed-off-by: provokateurin <kate@provokateurin.de>

--- a/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/spreed/21.1
+++ b/packages/nextcloud/packages/nextcloud_test_presets/docker/presets/spreed/21.1
@@ -1,4 +1,4 @@
-SERVER_VERSION=30.0.10-fpm-alpine@sha256:b2859c2e8b0a59f0957e2fc7f91bb50f4fb62d5d96160985950a8d52db3c4b33
+SERVER_VERSION=31.0.4-fpm-alpine@sha256:255a3734978e664f7dbc6d46987344f14f4c5f23bcaea6dbaad91a14ccd1bdce
 COOKBOOK_URL=https://github.com/christianlupus-nextcloud/cookbook-releases/releases/download/v0.11.3/cookbook-0.11.3.tar.gz
 COOKBOOK_CHECKSUM=sha256:1162c1ca9bf9f3c2243b5c31d2f16fdba35293918ac75a6a4964e501c5b69b01
 DROP_ACCOUNT_URL=https://packages.framasoft.org/projects/nextcloud-apps/drop-account/drop_account-2.7.1.tar.gz
@@ -7,11 +7,11 @@ NEWS_URL=https://github.com/nextcloud/news/releases/download/25.3.1/news.tar.gz
 NEWS_CHECKSUM=sha256:b6b5e70d2485cabe47297692d52dd7ae5480522893fbc07e90fd2583e7b12dcb
 NOTES_URL=https://github.com/nextcloud-releases/notes/releases/download/v4.12.0/notes-v4.12.0.tar.gz
 NOTES_CHECKSUM=sha256:51da8ae83882ebb60f732f38c05119693f0040b0e184d9dd2e211eb1078163b3
-SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v20.1.6/spreed-v20.1.6.tar.gz
-SPREED_CHECKSUM=sha256:2a57490f8f6fc4bd5c471b12f1e3974dcd2e61f8fc72d0a113060c2a271f2606
+SPREED_URL=https://github.com/nextcloud-releases/spreed/releases/download/v21.1.0-rc.1/spreed-v21.1.0-rc.1.tar.gz
+SPREED_CHECKSUM=sha256:c50878f294fffd5a5fdb497303e06cbc899dd53d5ced0abb8622d53658a8a91c
 TABLES_URL=https://github.com/nextcloud-releases/tables/releases/download/v0.9.2/tables-v0.9.2.tar.gz
 TABLES_CHECKSUM=sha256:83b1d0150245b555cc08a78e81415275902d48136fcf0805035bec622484d44c
 TERMS_OF_SERVICE_URL=https://github.com/nextcloud-releases/terms_of_service/releases/download/v4.4.0/terms_of_service-v4.4.0.tar.gz
 TERMS_OF_SERVICE_CHECKSUM=sha256:93ffce2e94d488b131a6e73cd63636efb8f7af502c7f49678fd53fe6a877bf20
-UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.0.2.tar.gz
-UPPUSH_CHECKSUM=sha256:fc318b62aac0987434f3c9ef843602871b20338d6ae5d3da29b141345c651b1e
+UPPUSH_URL=https://codeberg.org/NextPush/uppush/archive/2.3.0.tar.gz
+UPPUSH_CHECKSUM=sha256:dd00f782d09f86cf6d5ab6e288f3d5ee5631a7319085cdf5ba7499ba472bbcdd
